--- a/public/css/main.css
+++ b/public/css/main.css
@@ -371,6 +371,7 @@ body {
     width: 56px;
     height: 56px;
     margin-left: 10px;
+    border-radius:100px;
   }
   
   .navbar .navbar-nav .nav-link {
